--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Agar.io Style Game</title>
@@ -51,7 +52,9 @@
   <div class="hud" id="hud"></div>
   <div class="joystick" id="joy">
     <div class="stick" id="stick"></div>
-  </div>  <script>
+  </div>
+
+  <script>
     const canvas = document.getElementById('game');
     const ctx = canvas.getContext('2d');
     const hud = document.getElementById('hud');
@@ -294,5 +297,6 @@
       oldUpdate();
       updateMasses();
     }
-  </script></body>
+  </script>
+</body>
 </html>
