--- a/index.html
+++ b/index.html
@@ -2,103 +2,145 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Game Balap Kuda</title>
+<title>Game Balap Kuda Ultimate</title>
 <style>
-body { margin:0; font-family:Arial; background:#1e1e1e; color:#fff; text-align:center }
-#ui { padding:10px }
-button { padding:10px 16px; margin:5px; border:none; border-radius:6px; font-weight:bold }
-#start { background:#2ecc71 }
-#store { background:#9b59b6; color:#fff }
-#topup { background:#f1c40f }
-canvas { background:#2c3e50; display:block; margin:auto; border-radius:10px }
+body{margin:0;background:#141414;color:#fff;font-family:Arial;text-align:center}
+#ui{padding:8px}
+button{padding:10px 14px;margin:4px;border:none;border-radius:8px;font-weight:bold;font-size:15px}
+#gas{background:#e74c3c;color:#fff}
+#start{background:#2ecc71}
+canvas{background:#1f2a34;display:block;margin:8px auto;border-radius:14px}
 </style>
 </head>
 <body>
 <div id="ui">
-  <div>💎 Diamond Ungu: <span id="diamond">0</span></div>
-  <button id="start">START BALAP</button>
-  <button id="store">STORE KOSTUM</button>
-  <button id="topup">TOP UP 💎 (Simulasi)</button>
+  <div>🐎 LAP: <span id="lap">0</span>/3 | ⚡ Stamina: <span id="stamina">100</span></div>
+  <button id="start">START</button>
+  <button id="gas">GAS 🐎</button>
   <div id="info"></div>
 </div>
-<canvas id="game" width="360" height="500"></canvas><script>
+<canvas id="game" width="360" height="520"></canvas><script>
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d');
-let diamond = 0;
-let race = false;
 
-const player = { y: 420, x: 30, speed: 0, color: 'white', name:'PLAYER' };
-const horses = [
-  { y:100, x:30, speed:0, color:'red', name:'MERAH' },
-  { y:180, x:30, speed:0, color:'blue', name:'BIRU' },
-  { y:260, x:30, speed:0, color:'green', name:'HIJAU' },
-  player
-];
+// SPRITE KUDA (lari)
+const horseImg = new Image();
+horseImg.src = 'https://i.imgur.com/2yYayZk.png';
 
-const costumes = {
-  gold:{ price:5, color:'gold' },
-  fire:{ price:8, color:'orange' },
-  neon:{ price:10, color:'#00ffff' }
+const center = { x: canvas.width/2, y: canvas.height/2+20 };
+const tracks = [160, 140, 180];
+let trackIndex = 0;
+
+let racing = false;
+let lap = 0;
+let stamina = 100;
+
+const player = {
+  angle: -Math.PI/2,
+  speed: 0,
+  maxSpeed: 0.06,
+  costume: 'normal'
 };
 
-function draw(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+const bots = [
+  { angle:-Math.PI/2, speed:0.022, offset:14 },
+  { angle:-Math.PI/2, speed:0.02, offset:-14 }
+];
 
-  // finish line
-  ctx.strokeStyle='white';
-  ctx.beginPath(); ctx.moveTo(320,0); ctx.lineTo(320,500); ctx.stroke();
+const items = [];
 
-  horses.forEach(h=>{
-    ctx.fillStyle=h.color;
-    ctx.fillRect(h.x,h.y,30,20);
-    ctx.fillStyle='white';
-    ctx.fillText(h.name,h.x,h.y-4);
+function spawnItems(){
+  items.length=0;
+  for(let i=0;i<5;i++){
+    items.push({ angle:Math.random()*Math.PI*2, type:Math.random()>0.5?'boost':'slow' });
+  }
+}
+
+function drawTrack(){
+  ctx.strokeStyle='#bbb';
+  ctx.lineWidth=12;
+  ctx.beginPath();
+  ctx.arc(center.x, center.y, tracks[trackIndex], 0, Math.PI*2);
+  ctx.stroke();
+}
+
+function drawHorse(angle, offset, glow){
+  const r = tracks[trackIndex]+offset;
+  const x = center.x + Math.cos(angle)*r;
+  const y = center.y + Math.sin(angle)*r;
+  ctx.save();
+  ctx.translate(x,y);
+  ctx.rotate(angle+Math.PI/2);
+  if(glow){ ctx.shadowColor=glow; ctx.shadowBlur=15; }
+  ctx.drawImage(horseImg,-18,-18,36,36);
+  ctx.restore();
+}
+
+function drawItems(){
+  items.forEach(it=>{
+    const x = center.x + Math.cos(it.angle)*tracks[trackIndex];
+    const y = center.y + Math.sin(it.angle)*tracks[trackIndex];
+    ctx.fillStyle = it.type==='boost'?'#2ecc71':'#e74c3c';
+    ctx.beginPath(); ctx.arc(x,y,6,0,Math.PI*2); ctx.fill();
   });
 }
 
 function update(){
-  if(race){
-    horses.forEach(h=>{
-      h.speed += Math.random()*0.3;
-      h.x += h.speed;
-      if(h.x>=300){
-        race=false;
-        document.getElementById('info').innerText='🏆 PEMENANG: '+h.name;
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  drawTrack();
+  drawItems();
+
+  if(racing){
+    player.angle += player.speed;
+    bots.forEach(b=>b.angle+=b.speed);
+
+    // stamina logic
+    if(player.speed>0.03) stamina-=0.3;
+    else stamina+=0.2;
+    stamina=Math.max(0,Math.min(100,stamina));
+    document.getElementById('stamina').innerText=Math.floor(stamina);
+
+    // lap count
+    if(player.angle>Math.PI*1.5){
+      player.angle=-Math.PI/2;
+      lap++;
+      document.getElementById('lap').innerText=lap;
+      if(lap>=3){ racing=false; document.getElementById('info').innerText='🏆 FINISH!'; }
+    }
+
+    // items collision
+    items.forEach(it=>{
+      if(Math.abs(it.angle-player.angle)<0.05){
+        if(it.type==='boost') player.speed+=0.02;
+        else player.speed*=0.6;
+        it.angle=999;
       }
     });
+
+    player.speed*=0.985;
   }
-  draw();
+
+  drawHorse(player.angle,0, player.costume==='fire'?'orange':player.costume==='neon'?'cyan':null);
+  bots.forEach(b=>drawHorse(b.angle,b.offset,null));
+
   requestAnimationFrame(update);
 }
-
 update();
 
-// UI
 start.onclick=()=>{
-  horses.forEach(h=>{ h.x=30; h.speed=0 });
+  lap=0; stamina=100; player.speed=0;
+  player.angle=-Math.PI/2;
+  bots.forEach(b=>b.angle=-Math.PI/2);
+  trackIndex=(trackIndex+1)%tracks.length;
+  spawnItems();
+  racing=true;
+  document.getElementById('lap').innerText=lap;
   document.getElementById('info').innerText='';
-  race=true;
 };
 
-store.onclick=()=>{
-  let txt='STORE KOSTUM:\n';
-  for(let k in costumes){ txt+=`${k} (${costumes[k].price}💎)\n`; }
-  const pilih = prompt(txt+'ketik nama kostum');
-  if(costumes[pilih]){
-    if(diamond>=costumes[pilih].price){
-      diamond-=costumes[pilih].price;
-      player.color=costumes[pilih].color;
-      alert('Kostum dipakai!');
-      document.getElementById('diamond').innerText=diamond;
-    } else alert('Diamond kurang');
-  }
-};
-
-topup.onclick=()=>{
-  const d = parseInt(prompt('Isi diamond (simulasi)'));
-  if(!isNaN(d)){
-    diamond+=d;
-    document.getElementById('diamond').innerText=diamond;
+gas.onclick=()=>{
+  if(stamina>0 && player.speed<player.maxSpeed){
+    player.speed+=0.012;
   }
 };
 </script></body>
